--- a/themes/mythical_labyrinth_escape/templates/puzzle1.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle1.html
@@ -16,19 +16,20 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-        <!-- Custom theme CSS (includes Bootstrap)-->
     <link href="{% static 'css/customstyles.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/updatedcustomstyles.css' %}" rel="stylesheet" />
+
 
 </head>
 <body>
     <!-- Title Nav Bar-->
     <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav" style="background-color:black; opacity:60%;">
         <div class="container">
-            <span class="navbar-brand js-scroll-trigger" href="#page-top">Enchanted Forest 1/3</span>
+            <span class="navbar-brand js-scroll-trigger" href="#page-top">1/3 Witch's Hut</span>
 
                     <!-- Timer Placeholder -->
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a id="timer" class="btn btn-outline-light mx-1 text-white"> {{ request.session.timer }}</a>
+                        <a id="timer" class="btn btn-outline-light mx-1 text-light"> {{ request.session.timer }}</a>
                     </li>
         </div>
     </nav>
@@ -45,68 +46,55 @@
     </div>
 
     <!-- Middle Content-->
-    <div class="puzzle-container text-center">
+    <div class="puzzle-container text-center" style="height:500px;">
                 <div class="col-sm-3 row" style="display:inline-block;">
-                    <div id="left" class="bg-light text-center text-dark ml-2" style="height:100px; width:100%; display:inline-block;">
-                        <div>
-                            <p>Hint:</p>
-                            {{puzzle.hint}}
-                        </div>
+                    <div id="left" class="col-sm-12 bg-dark text-center text-light ml-2 mb-2" style="height:310px; width:100%; display:inline-block; opacity: 70%; border-radius: 2rem;">
+                        <div><h6>Story</h6></div>
+                        <div>{{puzzle.story}}   “Hey human! Wake up!” You hear a tiny voice shout out. As you slowly blink your eyes open, you find yourself in a witch's hut.
+                           You blink and rub your eyes in disbelief — is that a fairy trapped inside!
+                            “HEY!! Get the padlock off this thing before the witch comes back!” She yells, “Then I’ll slip outside and unbolt the door so we both can get out of here!! Hurry!!”
+                          </div>
                     </div>
-                    <div id="left" class="col-sm-12 bg-light text-center text-dark ml-2" style="height:300px; width:100%; display:inline-block;">
-                        <div>{{puzzle.story}}</div>
-                    </div>
-                    <div id="left" class="col-sm-12 bg-light text-center text-dark ml-2" style="height:150px; width:100%; display:inline-block;">
-                        <div>Inventory</div>
+                    <div id="left" class="col-sm-12 bg-dark text-center text-light ml-2 mb-2" style="height:100px; width:100%; display:inline-block; opacity: 70%; border-radius: 2rem;">
+                        <div><h6>Inventory</h6></div>
                         <div class="h100 text-center">
-                            <a class="btn btn-outline-dark mx-1" href="#!"><i class="fab fa-fw"></i></a>
-                            <a class="btn btn-outline-dark mx-1" href="#!"><i class="fab fa-fw"></i></a>
-                            <a class="btn btn-outline-dark mx-1" href="#!"><i class="fab fa-fw"></i></a>
+                            <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
+                            <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
+                            <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
+                        </div>
+                    </div>
+                    <div id="left" class="text-center bg-dark text-light ml-2" style="height:120px; width:100%; display:inline-block; opacity: 70%; border-radius: 2rem; padding: -2rem;">
+                        <div>
+                            <div id="puzzleonehint" class="my-2"><h6 class="btn btn-outline-light">Hint</h6></div>
+                            <p id="hintone" style="display:none">{{puzzle.hint}}</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-8 row" style="display:inline-block; vertical-align:top;">
-                    <div class="col-sm-12 d-inline-block bg-light text-dark ml-2" style="height:400px;">
-                        Puzzle One:
-                        <br>
-                        <img src="{% static '/images/note.png' %}" alt="Note">
-                    </div>
-                    <div class="col-sm-12 bg-light text-dark ml-2">
-                        <div class="col-sm-4 d-inline-block bg-light text-dark ml-2" style="height:150px;">{{puzzle.question}}</div>
-                        <div class="col-sm-4 d-inline-block bg-light text-dark ml-2" style="height:150px;">
-                            <form action="{{puzzle.id}}/answer" method="post">
-                                {% csrf_token %}
-                                <p><input type="text" value="3" name="answer"></p>
-                                <p><input type="submit" data-toggle="modal" value="Submit"></p>
-                            </form>
-                        </div>
+                <div class="col-sm-8 row" style="display:inline-block; vertical-align: top;">
+                    <div class="col-sm-12 bg-dark text-light ml-2" style="height:550px; opacity: 70%; border-radius: 2rem; padding: 3rem;">
+                        <h6>What's the key to the lock?</h6>
+                        <img src="{% static '/images/note.png' %}" alt="Note" style="height:300px;">
+                        <form action="{{puzzle.id}}/answer" method="post">
+                            {% csrf_token %}
+                            <p class="col-sm-3" style="display: inline-block;" ><input class="col-sm-12" type="text" value="3" name="answer"></p>
+                            <p class="col-sm-3" style="display: inline-block;"><input type="submit" class="btn btn-outline-light mx-1" value="Submit"></p>
+                        </form>
                     </div>
                 </div>
-    </div>
-
-    <!-- Success Modal to only be shown after player completes the current puzzle.-->
-    <div id="successModal" class="modal col-md-10">
-        <div class="modal-content col-md-6">
-            <div class="modal-header text-center col-md-12">
-                <h4 class="modal-title w-100 font-weight-bold">Success!</h4>
-                <div type=button class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </div>
-            </div>
-        </div>
     </div>
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
     <div class="scroll-to-top d-lg-none position-fixed">
         <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
     </div>
+
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
     <!-- Third party plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <!-- Core theme JS-->
-    <script src="{% static 'js/scripts.js' %}"></script>
+    <script src="{% static 'js/puzzlescripts.js' %}"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
         var interval = setInterval( increment, 1000);
