--- a/themes/mythical_labyrinth_escape/templates/success_puzzle1.html
+++ b/themes/mythical_labyrinth_escape/templates/success_puzzle1.html
@@ -14,16 +14,18 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital@0;1&display=swap" rel="stylesheet" type="text/css">
+        
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{% static 'css/customstyles.css' %}" rel="stylesheet" />  
+        <link href="{% static 'css/updatedcustomstyles.css' %}" rel="stylesheet" />  
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
         <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">  -->
     </head>
-<body>
+<body class="puzzlestyle">
   <!-- Title Nav Bar-->
   <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav" style="background-color:black; opacity:60%;">
     <div class="container">
-        <span class="navbar-brand js-scroll-trigger" href="#page-top">Enchanted Forest 1/3</span>
+        <span class="navbar-brand js-scroll-trigger" href="#page-top">Good Job!</span>
 
                 <!-- Timer Placeholder -->
                 <li class="nav-item mx-0 mx-lg-1">
@@ -32,28 +34,27 @@
     </div>
     </nav>
 
-    <!-- Video-->
-    <div class="video-background">
-        <div class="video-wrap">
-            <div id="video">
-                <video autoplay muted loop playsinline id="myVideo">
-                    <source src="{% static 'assets/vid/video.mp4' %}" type="video/mp4">
-                </video>
-            </div>
-        </div>
-    </div>
-
     <!-- Middle Content-->
-    <div class="puzzle-container text-center">
-                <div class="col-sm-10 row" style="display:inline-block;">
-                        <h3>As the last number slides into place, you hear a click and the padlock drops to the floor. The fairy bursts out of the cage with a triumphant laugh. “Silly witch!!” She giggled as she flew about the room. “She thinks capturing me will help her! Pah!!” You clear your throat to draw the tiny creature’s attention to you.</h3>
-                        <h3>The fairy stops her celebration and comes to hover in front of you. “Right. Time to discharge my debt; since you freed me, I shall help free you!” In a flash of light, she flies to the only window in the room and squeezes out. A moment later you hear grunting and, what sounds like cursing, on the other side of the door, and the grind of metal against metal.</h3>
-                        <h3>Finally, you hear a loud thunk and your heart jumps when you see the door crack open.</h3>
-                        <h3>“Hurry, human!! We haven’t all day if you don’t want to be the main ingredient in her next spell!!”</h3>
-                        <h3>As if you needed anymore encouragement to get out of here, you run to the door.</h3>
-                        <h4>You have successfully solved the puzzle! Click the link below to move on to the next level!</h4>
-                            <a class="btn btn-outline-light mx-1" href="/mythical_labyrinth_escape/puzzle/2">Attempt Puzzle Two</a>
+    <div class="box">
+                <div class="content" style="opacity:70%;">
+                    <img src="{% static '/images/freefairy.png' %}" alt="Note" style="height:300px; display: inline-block; vertical-align: top;">
+                    <div class="col-sm-8" style="display: inline-block;">
+                        <p> As the last number slides into place, you hear a click and the padlock drops to the floor. The fairy bursts out of the cage with a triumphant laugh. “Silly witch!!” She giggled as she flew about the room. “She thinks capturing me will help her! Pah!!”
+                            You clear your throat to draw the tiny creature’s attention to you.
+                            The fairy stops her celebration and comes to hover in front of you. “Right. Time to discharge my debt; since you freed me, I shall help free you!” In a flash of light, she flies to the only window in the room and squeezes out. A moment later you hear grunting and, what sounds like cursing, on the other side of the door, and the grind of metal against metal.
+                            Finally, you hear a loud thunk and your heart jumps when you see the door crack open.
+                            “Hurry, human!! We haven’t all day if you don’t want to be the main ingredient in her next spell!!”
+                            As if you needed anymore encouragement to get out of here, you run to the door.
+                        </p>
+                        <br></br>
+                        <a class="btn btn-outline-light mx-auto" href="/mythical_labyrinth_escape/puzzle/2">Begin Puzzle 2</a>
+                    </div> 
+                    
                 </div>
     </div>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'js/puzzlescripts.js' %}"></script>
 </body>
 </html>
