--- a/virtual_escape_room_app/static/css/customstyles.css
+++ b/virtual_escape_room_app/static/css/customstyles.css
@@ -1,7 +1,6 @@
 #left {
     display: inline-block;
     width: 600px;
-    background-color: pink;
 }
 
 .video-background {
@@ -18,3 +17,19 @@
     width: 100%;
     color: white;
 }
+
+.gold-title {
+    background: linear-gradient(to bottom, #cfc09f 22%,#634f2c 24%, #cfc09f 26%, #cfc09f 27%,#ffecb3 40%,#3a2c0f 78%); 
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: #fff;
+    font-family: serif;
+    position: relative;
+	text-transform: uppercase;	
+	margin: 0;
+	font-weight: 400;
+}
+
+ 
+
+
