--- a/virtual_escape_room_app/static/css/styles.css
+++ b/virtual_escape_room_app/static/css/styles.css
@@ -161,17 +161,17 @@ sup {
 }
 
 a {
-  color: #2196f3;
+  color: #1ABC9C;
   text-decoration: none;
   overflow: hidden;
   transition: 0.2s;
 }
 
 a:hover {
-  color: #255784;
-  background: #2196f3;
+  color: #166635;
+  background:#1ABC9C;
   box-shadow: 
-      0 0 10px 2px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3;
+      0 0 10px 2px #1ABC9C, 0 0 40px #1ABC9C, 0 0 80px #1ABC9C;
 }
 
 a:not([href]) {
@@ -3916,7 +3916,8 @@ input[type=button].btn-block {
   padding: 0.5rem 1rem;
 }
 .nav-link:hover, .nav-link:focus {
-  text-decoration: none;
+  color: black;
+  cursor: pointer;
 }
 .nav-link.disabled {
   color: #6c757d;
@@ -10094,13 +10095,13 @@ h3 {
   color: #fff;
 }
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-  color: #1abc9c;
+  color: darkslategrey;
 }
 #mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
   color: #fff;
 }
 #mainNav .navbar-nav li.nav-item a.nav-link.active {
-  color: #1abc9c;
+  color: darkslategrey;
 }
 #mainNav .navbar-toggler {
   font-size: 80%;
@@ -10266,4 +10267,5 @@ form .row:first-child .floating-label-form-group {
   background-color: #1a252f;
 }
 
+}
 
