--- a/themes/mythical_labyrinth_escape/templates/puzzle1.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle1.html
@@ -48,8 +48,8 @@
 
     <!-- Middle Content-->
     <div class="puzzle-container text-center" style="height:500px;">
-                <div class="col-sm-3 row" style="display:inline-block;">
-                    <div id="left" class="col-sm-12 bg-dark text-center text-light ml-2 mb-2" style="height:310px; width:100%; display:inline-block; opacity: 70%; border-radius: 2rem;">
+                <div class="col-sm-4" style="display:inline-block;">
+                    <div id="left" class="col-sm-12 bg-dark text-center text-light ml-2 mb-2" style="width:100%; display:inline-block; opacity: 70%; padding: 1rem; border-radius: 2rem;">
                         <div><h6>Story</h6></div>
                         <div>{{puzzle.story}}</div>
                     </div>
@@ -68,10 +68,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-8 row" style="display:inline-block; vertical-align: top;">
+                <div class="col-sm-7 row" style="display:inline-block; vertical-align: top;">
                     <div class="col-sm-12 bg-dark text-light ml-2" style="height:550px; opacity: 70%; border-radius: 2rem; padding: 3rem;">
                         <h6>{{puzzle.question}}</h6>
-                        <img src="{% static '/images/note.png' %}" alt="Note" style="height:300px;">
+                        <img src="{% static '/images/note.png' %}" alt="Note" style="height: 300px">
                         <form action="{{puzzle.id}}/answer" method="post">
                             {% csrf_token %}
                             <p class="col-sm-3" style="display: inline-block;" ><input class="col-sm-12" type="text" value="3" name="answer"></p>
@@ -93,6 +93,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <!-- Core theme JS-->
     <script src="{% static 'js/scripts.js' %}"></script>
+    <script src="{% static 'js/puzzlescripts.js' %}"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{% static 'js/timer.js' %}"></script>
     <script>
