--- a/themes/mythical_labyrinth_escape/templates/puzzle3.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle3.html
@@ -23,7 +23,7 @@
     <!-- Title Nav Bar-->
     <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav" style="background-color:black; opacity:60%;">
         <div class="container">
-            <span class="navbar-brand js-scroll-trigger" href="#page-top">Mythical Labyrinth Escape 3/3</span>
+            <span class="navbar-brand js-scroll-trigger" href="#page-top">3/3 Secret Phrase</span>
 
                     <!-- Timer Placeholder -->
                     <li class="nav-item mx-0 mx-lg-1">
@@ -46,42 +46,35 @@
 
     <!-- Middle Content-->
     <div class="puzzle-container text-center">
-                <div class="col-sm-3 row" style="display:inline-block;">
-                    <div id="left" class="bg-dark text-center text-light ml-2" style="height:100px; width:100%; display:inline-block;">
-                        <div class="mt-2">
-                            <input type='button' class='toggleBtn' value='Show Hint'>
-                            <div class="textDiv"> </div>
-                        </div>
-                    </div>
-                    <div id="left" class="col-sm-12 bg-dark text-center text-light ml-2" style="width:100%; display:inline-block;">
+                <div class="col-sm-5" style="display:inline-block;">
+                    <div id="left" class="col-sm-12 bg-dark text-center text-light ml-2 mb-2" style="width:100%; display:inline-block; opacity: 70%; border-radius: 2rem;">
+                        <div><h6>Story</h6></div>
                         <div>{{puzzle.story}}</div>
                     </div>
-                    <div id="left" class="col-sm-12 bg-dark text-center text-light ml-2" style="height:150px; width:100%; display:inline-block;">
-                        <div class="mt-2">Inventory</div>
+                    <div id="left" class="col-sm-12 bg-dark text-center text-light ml-2 mb-2" style="height:100px; width:100%; display:inline-block; opacity: 70%; border-radius: 2rem;">
+                        <div><h6>Inventory</h6></div>
                         <div class="h100 text-center">
                             <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
                             <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
                             <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-8 row" style="display:inline-block; vertical-align:top;">
-                    <div class="col-sm-12 d-inline-block bg-dark text-light ml-2" style="height:400px;">
-                        Puzzle Three:
-                        <br>
-                        <img src="{% static '/images/gnomes.jpg' %}" alt="3 gnomes riddle">
+                    <div id="left" class="text-center bg-dark text-light ml-2" style="height:120px; width:100%; display:inline-block; opacity: 70%; border-radius: 2rem; padding: -2rem;">
+                        <div>
+                            <div id="puzzleonehint" class="my-2"><h6 class="btn btn-outline-light">Hint</h6></div>
+                            <p id="hintone" style="display:none">{{puzzle.hint}}</p>
+                        </div>
                     </div>
-                    <div class="col-sm-12 bg-dark text-light ml-2">
-                        <div class="col-sm-4 d-inline-block bg-dark text-light ml-2" style="height:150px;">
-                            <p>{{puzzle.question}}</p>
-                        </div>
-                        <div class="col-sm-4 d-inline-block bg-dark text-light ml-2" style="height:150px;">
-                            <form action="{{puzzle.id}}/answer" method="POST">
-                                {% csrf_token %}
-                                <input type="text" id="answer" name="answer">
-                                <input type="submit" value="Solve Riddle">
-                            </form>
-                        </div>
+                </div>
+                <div class="col-sm-6 row" style="display:inline-block; vertical-align:top;">
+                    <div class="col-sm-12 d-inline-block bg-dark text-light ml-2" style="height:550px; opacity: 70%; border-radius: 2rem; padding: 3rem;">
+                        <img src="{% static '/images/gnomes.jpg' %}" alt="3 gnomes riddle" class="mt-2">
+                        <p>{{puzzle.question}}</p>
+                        <form action="{{puzzle.id}}/answer" method="POST">
+                            {% csrf_token %}
+                            <input type="text" id="answer" name="answer">
+                            <input type="submit" value="Solve Riddle">
+                        </form>
                     </div>
                 </div>
     </div>
@@ -97,6 +90,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <!-- Core theme JS-->
     <script src="{% static 'js/scripts.js' %}"></script>
+    <script src="{% static 'js/puzzlescripts.js' %}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{% static 'js/timer.js' %}"></script>
     <script>
