--- a/themes/mythical_labyrinth_escape/templates/results.html
+++ b/themes/mythical_labyrinth_escape/templates/results.html
@@ -23,7 +23,7 @@
     <!-- Title Nav Bar-->
     <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav" style="background-color:black; opacity:60%;">
         <div class="container">
-            <span class="navbar-brand js-scroll-trigger" href="#page-top">Results</span>
+            <span class="navbar-brand js-scroll-trigger" href="#page-top">Congratulations</span>
                 <!-- Play Again/Exit Placeholder -->
                 <li class="nav-item mx-0 mx-lg-1">
                     <a class="btn btn-outline-light mx-1" href="/virtual_escape_room">Play Again</a>
@@ -45,49 +45,14 @@
 
     <!-- Middle Content-->
     <div class="puzzle-container text-center">
-                <div class="col-sm-3 row" style="display:inline-block;">
-                    <div id="left" class="bg-dark text-center text-light ml-2" style="height:100px; width:100%; display:inline-block;">
-                        <div class="mt-2"><h4>Congratulations!</h4></div>
-                    </div>
-                    <div id="left" class="col-sm-12 bg-dark text-center text-light ml-2" style="width:100%; display:inline-block;">
-                        <div class="mb-2"><b>Player Achievements</b></div>
-                        <div class="row mx-2">
-                            <table id="table1" class="table table-striped table-bordered text-light">
-                                <tr class="bg-secondary">
-                                    <th>Username</th>
-                                    <th>Theme</th>                                  
-                                    <th>Status</th>
-                                    <th>Time</th>
-                                </tr>
-                                {% for results_player in queryachievements %}
-                                <tr>
-                                    <td>{{ results_player.players.username }}</td>
-                                    <td>{{ results_player.theme.title }}</td>                                    
-                                    <td>{{ results_player.status }}</td>
-                                    <td>{{ results_player.timer }}</td>
-                                </tr>
-                                {% endfor %}
-                            </table>
-                        </div>
-                    </div>
-                    <div id="left" class="col-sm-12 bg-dark text-center text-light ml-2" style="height:150px; width:100%; display:inline-block;">
-                        <div class="mb-2"><b>Achievement Awards</b></div>
-                        <div class="h100 text-center">
-                            <!-- Individual Results -->
-                            
-                            <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
-                            <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
-                            <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
-                        </div>
-                    </div>
-                </div>
                 <div class="col-sm-8 row" style="display:inline-block; vertical-align:top;">
-                    <div class="col-sm-12 d-inline-block bg-dark text-light ml-2" style="height:550px;"><h4 class="mt-2">Leaderboard</h4>
+                    <div class="col-sm-12 d-inline-block bg-dark text-light ml-2" style="height:550px; border-radius:2rem; opacity: 70%;"><div class="mt-2"><h4>Leaderboard:</h4></div>
+
                     <div class="h100 text-center">
                         <!-- Leaderboard Results -->
                         <div class="row mx-2">
                             <table id="table2" class="table table-striped table-bordered text-light">
-                                <tr class="bg-secondary">
+                                <tr style="background-color: #1ABC96">
                                     <th>Username</th>
                                     <th>Theme</th>
                                     <th>Status</th>
@@ -104,6 +69,16 @@
                             </table>
                         </div>
                     </div>
+
+                            <div class="mb-2"><b>Your Achievement Awards</b></div>
+                            <div class="h100 text-center">
+                                <!-- Individual Results -->
+                                
+                                <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
+                                <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
+                                <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
+                            </div>
+                        </div>
                 </div>
     </div>
 
