--- a/themes/mythical_labyrinth_escape/templates/puzzle2.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle2.html
@@ -51,11 +51,11 @@
     <!-- Middle Content-->
     <div class="puzzle-container">
                 <div class="col-sm-5 row ml-5" style="display:inline-block;">
-                    <div id="left" class="col-sm-12 bg-dark text-center text-light ml-2 mb-2" style="width:100%; display:inline-block; padding: 1rem; opacity: 70%; border-radius: 2rem;">
+                    <div id="left" class="col-sm-12 bg-dark text-center text-light ml-2 mb-2" style="width:100%; display:inline-block; padding: 1rem; border-radius: 2rem;">
                         <div><h6>Story</h6></div>
                         <div>{{puzzle.story}}</div>
                     </div>
-                    <div id="left" class="col-sm-12 bg-dark text-center text-light ml-2 mb-2" style="height:100px; width:100%; display:inline-block; opacity: 70%; border-radius: 2rem;">
+                    <div id="left" class="col-sm-12 bg-dark text-center text-light ml-2 mb-2" style="height:100px; width:100%; display:inline-block; border-radius: 2rem;">
                         <div><h6>Inventory</h6></div>
                         <div class="h100 text-center">
                             <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
@@ -63,14 +63,14 @@
                             <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
                         </div>
                     </div>
-                    <div id="left" class="text-center bg-dark text-light ml-2" style="height:120px; width:100%; display:inline-block; opacity: 70%; border-radius: 2rem; padding: -2rem;">
+                    <div id="left" class="text-center bg-dark text-light ml-2" style="height:120px; width:100%; display:inline-block; border-radius: 2rem; padding: -2rem;">
                         <div>
                             <div id="puzzleonehint" class="my-2"><h6 class="btn btn-outline-light">Hint</h6></div>
                             <p id="hintone" style="display:none">{{puzzle.hint}}</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 row ml-2" style="display:inline-block; vertical-align:top; opacity: 70%; border-radius: 2rem;">
+                <div class="col-sm-6 row ml-2" style="display:inline-block; vertical-align:top; border-radius: 2rem;">
                     
                     <div id="maze" class="col-sm-12 bg-dark text-light ml-2" style="height:400px; width:100%;">
                         <div id="world"></div>
@@ -78,19 +78,18 @@
                         <div id="cherry"></div>
                         <div id="ghost"></div>
                         <br>
-                        <div class="col-sm-8 d-inline-block bg-dark text-light ml-2" style="height:150px;">
-                            {{puzzle.question}}
-                        </div>
                         <div id="score" class="btn-outline-light text-white"></div>
                     </div>
 
                     <div class="col-sm-12 bg-dark text-light ml-2">
-                       
                         <div class="col-sm-12 d-inline-block bg-dark text-light ml-2" style="height:80px;">
-                            <form action="{{puzzle.id}}/answer" method="post">
+                            <form class="row mt-4" action="{{puzzle.id}}/answer" method="post">
                             {% csrf_token %}
-                            <p class="col-sm-7" style="display: inline-block;" ><input class="col-sm-12" type="text" value="3" name="answer"></p>
-                            <p class="col-sm-3" style="display: inline-block;"><input type="submit" class="btn btn-outline-light mx-1" value="Submit"></p>
+                            <h6 class="col">{{puzzle.question}}</h6>
+                            <p class="col">
+                                <input type="text" name="answer">
+                                <input type="submit" class="ml-2 btn btn-outline-light" value="Submit">
+                            </p> 
                             </form>
                         </div>
                     </div>
