--- a/themes/mythical_labyrinth_escape/templates/results.html
+++ b/themes/mythical_labyrinth_escape/templates/results.html
@@ -46,7 +46,7 @@
     <!-- Middle Content-->
     <div class="puzzle-container text-center">
                 <div class="col-sm-8 row" style="display:inline-block; vertical-align:top;">
-                    <div class="col-sm-12 d-inline-block bg-dark text-light ml-2" style="height:550px; border-radius:2rem; opacity: 70%;"><div class="mt-2"><h4>Leaderboard:</h4></div>
+                    <div class="col-sm-12 d-inline-block bg-dark text-light ml-2" style="border-radius:2rem;"><div class="mt-2"><h4>Leaderboard</h4></div>
 
                     <div class="h100 text-center">
                         <!-- Leaderboard Results -->
@@ -71,7 +71,7 @@
                     </div>
 
                             <div class="mb-2"><b>Your Achievement Awards</b></div>
-                            <div class="h100 text-center">
+                            <div class="h100 text-center mb-2">
                                 <!-- Individual Results -->
                                 
                                 <a class="btn btn-outline-light mx-1" href="#!"><i class="fab fa-fw"></i></a>
