--- a/virtual_escape_room_app/templates/landing.html
+++ b/virtual_escape_room_app/templates/landing.html
@@ -173,7 +173,7 @@
             text-transform: uppercase;	
             margin: 0;
             font-weight: 400;">Mythical Labyrinth Escape</h1>
-            <h6 class="col-sm-6 mx-auto">You've been captured by a witch who intends to use you for a spell - you will need to keep your wits about you in the challenges ahead to escape before it's too late! But fear not, you are not alone; a friendly fairy will help light your path... or will she?</h6>
+            <h5 class="col-sm-6 mx-auto mt-3">You've been captured by a witch who intends to use you for a spell - you will need to keep your wits about you in the challenges ahead to escape before it's too late! But fear not, you are not alone; a friendly fairy will help light your path... or will she?</h6>
             <!-- ***** Play Button should only show once the player successfully signs in ****-->
             {% if player %}
                 <a class="btn btn-outline-light mt-2" href="/virtual_escape_room/create_game">Play</a>
